delete all extra deps