@@ -24,10 +24,10 @@ application {
 }
 
 
-idea { module { downloadJavadoc = true; downloadSources = true } }// чтобы качало sources и javadocs ИЗ maven
+idea { module { downloadJavadoc = true; downloadSources = true } }
 
 java {
-	withSourcesJar() // чтобы собирало исходники для публикации в maven
+	withSourcesJar()
 }
 
 lombok { version = 'latest.release' }
@@ -70,66 +70,19 @@ tasks.withType(GenerateModuleMetadata).configureEach {
 
 test { //or: tasks.named('test'){ or: tasks.withType(Test).configureEach // https://docs.gradle.org/current/dsl/org.gradle.api.tasks.testing.Test.html
 	useJUnitPlatform()
-/*  testLogging {
-	events "passed", "skipped", "failed"
-	showStandardStreams = true // show standard out & err of the test JVM on the console
-	showExceptions = true
-	exceptionFormat = 'full'
-  } */
 	enableAssertions = true
 	maxHeapSize = "5G"
-	// --add-exports = export package for normal (public) access at compile and runtime.
-	// --add-opens =   open package for DEEP reflective access (including private) at runtime only.
-	// Use --add-exports if only public access is required; use --add-opens if reflective access to _private members_ is needed. Both break module encapsulation and should be used cautiously.
 	jvmArgs += [
-		'-XX:MaxDirectMemorySize=3G',
 		'-XX:+EnableDynamicAgentLoading',
 		'-showversion',
-		'-XX:ActiveProcessorCount=32',
-		'-Djdk.tracePinnedThreads=full',
-		//'-XX:+UseParallelGC',
-		'-XX:+HeapDumpOnOutOfMemoryError',
-		'-XX:+UseCompressedOops',
-		'-XX:-OmitStackTraceInFastThrow',
-		'-Djava.net.preferIPv4Stack=true', // Ignite просит если не используешь IPv6
-		'-Dfile.encoding=UTF-8',
-		'-XX:+DoEscapeAnalysis',
-		'-XX:CompileCommand=inline,java/lang/String.charAt',
-		// Ignite нужна только часть этих опций (https://ignite.apache.org/docs/latest/quick-start/java -or- https://ignite.apache.org/docs/ignite3/latest/quick-start/embedded-mode):
-		'-Dio.netty.tryReflectionSetAccessible=true',
-		'--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
-		'--add-opens=java.base/jdk.internal.access=ALL-UNNAMED',
-		'--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
-		'--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
-		'--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED',
-		'--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
-		'--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
-		'--add-opens=java.base/java.io=ALL-UNNAMED',
-		'--add-opens=java.base/java.nio=ALL-UNNAMED',
-		'--add-opens=java.base/java.util=ALL-UNNAMED',
-		'--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
-		'--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED',
-		'--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
-		'--add-opens=java.base/java.lang=ALL-UNNAMED',
-		'--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
-		'--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
-		'--add-opens=java.base/java.math=ALL-UNNAMED',
-		'--add-opens=java.base/java.time=ALL-UNNAMED',
-		'--add-opens=java.sql/java.sql=ALL-UNNAMED',
-		'--add-opens=java.base/java.net=ALL-UNNAMED'
+		'--enable-native-access=ALL-UNNAMED'
 	]
-	println "[INFO] file.encoding: ${System.getProperty("file.encoding")}/${getDefaultCharacterEncoding()}, " +
-			"slf4j: ${System.getProperty("slf4j.detectLoggerNameMismatch")}, TZ: ${System.getProperty("user.timezone")}, lang: ${System.getProperty("user.language")}"
-	systemProperty("file.encoding", "UTF-8") // almost no-op
-	systemProperty("user.timezone", System.getProperty("user.timezone"))
-	systemProperty("user.language", System.getProperty("user.language"))
 
 	// gradle -Dmy.sys.prop=value НЕ передаёт в my.sys.prop=value в forked test. Хитрый хак: -D&my.sys.prop=5
 	for (entry in System.getProperties()){
 		if (entry.key.toString().startsWith("&"))
 			options { systemProperty(entry.key.toString().substring(1), entry.value) }
 	}
-	// в multi-project нас чаще запускают в корне, но могут в our subproject dir: где искать конфиги?!
 	workingDir project.projectDir // Set the working directory to the subproject directory e.g. fink-lab/common-utils
 	systemProperty("user.dir", project.projectDir) // контрольная перестраховка ^
 	println "[INFO] Test JVM: ${getJavaVersion()} = ${getExecutable()==null ? org.gradle.internal.jvm.Jvm.current().getJavaExecutable().getAbsolutePath() : getExecutable()}"
@@ -141,34 +94,7 @@ dependencies {
 	errorprone("com.google.errorprone:error_prone_core:latest.release")
 
 	compileOnly libs.bundles.coreAnnotation
-	compileOnly libs.slf4jApi
-	implementation libs.guava, libs.commonsLang3, libs.micrometerCore
-	implementation libs.bundles.jackson
+	implementation libs.guava, libs.commonsLang3, libs.slf4jApi
 
-	api(libs.natsCore, libs.natsSpring) // NATS.io 🚀
-
-	compileOnly libs.springBootStarterActuator
-
-	// TEST
-	testImplementation libs.bundles.junit
-	testImplementation 'redis.clients:jedis:6.+'
-	//testImplementation 'org.apache.ignite:ignite-api:3.+'
-	testImplementation 'org.apache.ignite:ignite-core:2.+' // 3.+
-	//testImplementation 'org.apache.ignite:ignite-runner:3.+'
-	testImplementation 'org.apache.ignite:ignite-indexing:2.+'
-	testImplementation 'org.apache.ignite:ignite-spring:2.+'
-	//testImplementation("org.apache.ignite:ignite-storage-rocksdb:3.+")
-	testRuntimeOnly libs.bundles.junitRuntime
-	testImplementation libs.testcontainers.junit
 	implementation libs.rocksdb
-	testImplementation libs.jdbc.sqlite
-}
-
-configurations.configureEach { // .implementation? https://tomgregory.com/how-to-exclude-gradle-dependencies/
-	exclude group: "commons-logging", module: "commons-logging"
-	exclude group: 'org.springframework', module: 'spring-jcl'
-	exclude group: "org.apache.logging.log4j", module: "log4j-api" // vertx,spring-boot-starter-logging тянут
-	exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
-	exclude group: "org.jboss.slf4j", module: "slf4j-jboss-logmanager"
-	exclude group: 'com.google.guava', module: 'listenablefuture'
 }
